to do list upgrade

--- a/To-Do List/index.html
+++ b/To-Do List/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class='container'>
+        <div class='toDoList' id='toDoL'>
+            <h1>To-Do List</h1>
+            <input type="text" name="itemInput" id="itemInput" placeholder="Add an item!">
+            <button type="button" name="addItem" id="addItem">Add To-Do</button>
+            <button type="button" name="deleteBtn" id="deleteBtn">Clear List</button>
+        </div>
 
-    <div class='toDoList'>
-        <h1>To-Do List</h1>
-        <input type="text" name="itemInput" id="itemInput" placeholder="Add an item!">
-        <button type="button" name="addItem" id="addItem">Add To-Do</button>
-        <button type="button" name="deleteBtn" id="deleteBtn">Clear List</button>
+        <ol id="list"></ol>
     </div>
-
-    <ol id="list">
-        
-    </ol>
-
+   
     <script src="app.js"></script>
 
 </body>
