--- a/Note Taker App/index.html
+++ b/Note Taker App/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Note Taker app</title>
 </head>
+
 <body>
+    <h1>Note Taker</h1>
+    <h3>Add A new Note:</h3>
+
+    <div class="note">
+        <label for="notePage">Note:</label>
+        <textarea name="notePage" id="notePage" cols="60" rows="5"></textarea>
+        <button id="addButton">Add Note</button>
+    </div>
+
+    <section class="section">
+
+    </section>
     
+    <script src="app.js"></script>
 </body>
+
 </html>
