--- a/Note Taker App/index.html
+++ b/Note Taker App/index.html
@@ -9,19 +9,22 @@
 </head>
 
 <body>
-    <h1>Note Taker</h1>
-    <h3>Add A new Note:</h3>
+    <main class='body'>
+        <div class="note">
+            <h1>Note Taker</h1>
+            <h3>Add A new Note:</h3>
+            <div class="textArea">
+                <label for="notePage">Note:</label>
+                <textarea name="notePage" id="notePage" cols="60" rows="5"></textarea>
+            </div>
+            <button id="addButton">Add Note</button>
+        </div>
 
-    <div class="note">
-        <label for="notePage">Note:</label>
-        <textarea name="notePage" id="notePage" cols="60" rows="5"></textarea>
-        <button id="addButton">Add Note</button>
-    </div>
+        <section class="section">
 
-    <section class="section">
+        </section>
+    </main>
 
-    </section>
-    
     <script src="app.js"></script>
 </body>
 
