--- a/Note Taker App/index.html
+++ b/Note Taker App/index.html
@@ -20,10 +20,16 @@
             <button id="addButton">Add Note</button>
         </div>
 
-        <section class="section">
-
-        </section>
+        <section class="section"></section>
+        
     </main>
+
+    <div class="detail">
+        <section class="detailTable">
+            <button id="backButton">X</button>
+            <p id="detailText"></p>
+        </section>
+    </div>
 
     <script src="app.js"></script>
 </body>
